[package]
name = "randpas"
version = "0.1.0"
authors = ["prem"]
edition = "2018"
homepage= ""
description = "A random password generator"
readme = "./README.md"
repository = "https://github.com/ProCode2/randpas"
keywords = ["password", "random", "generator"]
categories = ["random", "random text generator", "password"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
